# ai-drivebook

./: .gitignore  README.md  config.py  dbcache.py  kniha_jazd_ai_11_2025.csv  kniha_jazd_ai_11_2025.xlsx  llm_cities.py  main.py  map_service.py  mcp_client.py  models.py  nodes.py  pyproject.toml  requirements.txt  service.py  utils.py  web_app.py  workflow.py
mcp/: Dockerfile  mcp.json  requirements.txt  server.py  test_server.py
static/: style.css
templates/: form.html  result.html
